@@ -599,6 +599,18 @@
 
 
   void
+  grGotobitmapColor( grBitmap*  bitmap,
+                     int        r,
+                     int        g,
+                     int        b,
+                     int        a )
+  {
+    gr_text_bitmap = bitmap;
+    gr_color       = grFindColor( bitmap, r, g, b, a );
+  }
+
+
+  void
   grSetMargin( int  right,
                int  top )
   {
